修复mixin报错